objects are now returned when created or updated. updated swagger
