# db_api/views/post.py
@@ -36,13 +36,14 @@ def update_post(post_id):
             post.url_two = request.form['url_two']
         try:
             db.session.commit()
+            updated_post = Post.query.filter_by(id=post_id).first()
         except sqlalchemy.exc.SQLAlchemyError as e:
             error = "Cannot update post. "
             print(app.config.get("DEBUG"))
             if app.config.get("DEBUG"):
                 error += str(e)
             return make_response(jsonify({"code": 404, "msg": error}), 404)
-        return jsonify({"code": 200, "msg": "success"})
+        return jsonify(row2dict(updated_post))
     else:
         return make_response(jsonify({"code": 404, "msg": "Cannot find this post."}), 404)
 
@@ -56,13 +57,14 @@ def add_post():
     db.session.add(newPost)
     try:
         db.session.commit()
+        added_post = Post.query.filter_by(id=newPost.id).first()
     except sqlalchemy.exc.SQLAlchemyError as e:
         error = "Cannot add post."
         print(app.config.get("DEBUG"))
         if app.config.get("DEBUG"):
             error += str(e)
         return make_response(jsonify({"code": 404, "msg": error}), 404)
-    return jsonify({"code": 200, "msg": "success"})
+    return jsonify(row2dict(added_post))
 
 
 @bp.route("/<post_id>", methods=['DELETE'])
@@ -74,6 +76,6 @@ def delete_post(post_id):
             db.session.commit()
             return jsonify({"code": 200, "msg": "success"})
         except sqlalchemy.exc.IntegrityError:
-            return make_response(jsonify({"code": 400, "msg": "This post has existing vote"}), 400)
+            return make_response(jsonify({"code": 400, "msg": "This post has existing votes"}), 400)
     else:
         return make_response(jsonify({"code": 404, "msg": "Cannot find this post."}), 404)
