# db_api/views/vote.py
@@ -50,13 +50,14 @@ def update_vote(post_id, user_id):
             vote.value = request.form['value']
         try:
             db.session.commit()
+            updated_vote = Vote.query.filter_by(post_id=post_id, user_id=user_id).first()
         except sqlalchemy.exc.SQLAlchemyError as e:
             error = "Cannot update vote. "
             print(app.config.get("DEBUG"))
             if app.config.get("DEBUG"):
                 error += str(e)
             return make_response(jsonify({"code": 404, "msg": error}), 404)
-        return jsonify({"code": 200, "msg": "success"})
+        return jsonify(row2dict(updated_vote))
     else:
         return make_response(jsonify({"code": 404, "msg": "Cannot find this vote."}), 404)
 
@@ -70,13 +71,14 @@ def add_vote():
     db.session.add(newVote)
     try:
         db.session.commit()
+        added_vote = Vote.query.filter_by(user_id=newVote.user_id, post_id=newVote.post_id).first()
     except sqlalchemy.exc.SQLAlchemyError as e:
         error = "Cannot add vote."
         print(app.config.get("DEBUG"))
         if app.config.get("DEBUG"):
             error += str(e)
         return make_response(jsonify({"code": 404, "msg": error}), 404)
-    return jsonify({"code": 200, "msg": "success"})
+    return jsonify(row2dict(added_vote))
 
 
 @bp.route("/<post_id>/<user_id>", methods=['DELETE'])
